[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygsap"
version = "0.0.1"
authors = [
  { name="Gilberto Silva Tijerina", email="gilberto.silvat2812@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gilberto2812/pygsap"
"Bug Tracker" = "https://github.com/Gilberto2812/pygsap/issues"